tests/rosetta/transpiler/Scala/draw-a-sphere.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/draw-a-sphere.scala:83: error: type mismatch;
 found   : Double
 required: Int
        var intensity: Int = (1.0 - b) * (((shades).size).toString.toDouble - 1.0).toInt
                                       ^
/workspace/mochi/tests/rosetta/transpiler/Scala/draw-a-sphere.scala:85: error: type mismatch;
 found   : scala.math.BigInt
 required: Int
          intensity = BigInt(0)
                            ^
two errors found
